(coq.theory
  (name __WaterproofTests)
  (package coq-waterproof)
  (flags :standard
  -w -deprecated-missing-stdlib
  -w -deprecated-from-Coq
  -w -notation-incompatible-prefix)
  (plugins coq-waterproof.plugin rocq-runtime.plugins.ltac rocq-runtime.plugins.ltac2)
  (theories Waterproof))

(include_subdirs qualified)
