(coq.theory
  (name Waterproof)
  (package coq-waterproof)
  (flags
  :standard
  -w -deprecated-missing-stdlib
  -w -notation-incompatible-prefix
  -w -ltac2-unused-variable
  -w -deprecated-from-Coq
  -w -non-reference-hint
  -w -non-reference-hint-using)
 (theories Stdlib Ltac2)
  (plugins coq-waterproof.plugin rocq-runtime.plugins.ltac rocq-runtime.plugins.ltac2))

(include_subdirs qualified)

(rule
 (alias runtest)
 (deps (alias ../install))
 (action (progn
             (echo "Testing:")
             (run pwd)
             (run python3 ../../../tests/test-folder.py ../../../../waterproof-exercises)
)))
